add support for getting values of every NZX stock